--- a/src/app/modules/Site/configuration/sections/workflow/workflow-form/components/document-types/document-types.component.html
+++ b/src/app/modules/Site/configuration/sections/workflow/workflow-form/components/document-types/document-types.component.html
@@ -31,7 +31,7 @@
                 </div>
               </ng-template>
             </p-pickList> -->
-                    <p-pickList filterBy="documentType.name" (onSourceFilter)="filterString($event)"
+                    <!-- <p-pickList filterBy="documentType.name" (onSourceFilter)="filterString($event)"
                         (onTargetSelect)="onTargetSelect($event)" [source]="documentTypes" [responsive]="true"
                         [target]="assignedDocumentTypes" sourceHeader="{{ 'AvailableDocumentTypes' | translate}}"
                         targetHeader="{{ 'AssignedDocumentTypes' | translate}}" [showSourceControls]="false"
@@ -48,25 +48,10 @@
                                 </span>
                             </div>
                         </ng-template>
-                    </p-pickList>
+                    </p-pickList> -->
 
-
-
-<p-picklist 
-  [source]="sourceAssignments" 
-  [target]="targetAssignments" 
-  [dragdrop]="true" 
-  [responsive]="true" 
-  [sourceStyle]="{ height: '30rem' }" 
-  [targetStyle]="{ height: '30rem' }" 
-  filterBy="documentType.name" 
-  sourceFilterPlaceholder="Buscar por nombre" 
-  targetFilterPlaceholder="Buscar por nombre" 
-  breakpoint="1400px">
-  <ng-template let-assignment #item>
-    {{ assignment.documentType.name }}
-  </ng-template>
-</p-picklist>
+                    <app-transfer-panel [sourceItems]="documentTypes" [targetItems]="assignedDocumentTypes"
+                        [displayProperty]="'documentType.name'" (itemsChanged)="onItemsChanged($event)" />
 
                 </div>
                 <div class="col-xxl-4">
