--- a/src/app/shared/components/transfer-panel/transfer-panel.component.html
+++ b/src/app/shared/components/transfer-panel/transfer-panel.component.html
@@ -21,6 +21,7 @@
                   *ngFor="let item of filteredSourceItems"
                   class="list-group-item list-group-item-action"
                   [class.active]="selectedSourceItems.includes(item)"
+                  [class.single-select]="!enableMultiSelect"
                   (click)="toggleSourceSelection(item)"
                 >
                   {{ getItemDisplayValue(item) }}
@@ -89,6 +90,7 @@
                   *ngFor="let item of filteredTargetItems"
                   class="list-group-item list-group-item-action"
                   [class.active]="selectedTargetItems.includes(item)"
+                  [class.single-select]="!enableMultiSelect"
                   (click)="toggleTargetSelection(item)"
                 >
                   {{ getItemDisplayValue(item) }}
