--- a/src/app/shared/components/transfer-panel/transfer-panel.component.scss
+++ b/src/app/shared/components/transfer-panel/transfer-panel.component.scss
@@ -32,6 +32,7 @@
       border-right: none;
       border-radius: 0;
       padding: 0.75rem 1rem;
+      transition: background-color 0.2s ease;
 
       &:first-child {
         border-top: none;
@@ -45,6 +46,19 @@
         background-color: #0d6efd;
         border-color: #0d6efd;
         color: white;
+      }
+
+      &.single-select {
+        &:hover:not(.active) {
+          background-color: #f8f9fa;
+        }
+
+        &.active {
+          background-color: #0d6efd;
+          border-color: #0d6efd;
+          color: white;
+          font-weight: 500;
+        }
       }
 
       &:hover:not(.active) {
