--- a/src/app/shared/components/transfer-panel/transfer-panel.component.html
+++ b/src/app/shared/components/transfer-panel/transfer-panel.component.html
@@ -24,7 +24,13 @@
                   [class.single-select]="!enableMultiSelect"
                   (click)="toggleSourceSelection(item)"
                 >
-                  {{ getItemDisplayValue(item) }}
+                  <ng-container *ngIf="sourceItemTemplate; else defaultSourceTemplate">
+                    <ng-container *ngTemplateOutlet="sourceItemTemplate; context: { $implicit: item }">
+                    </ng-container>
+                  </ng-container>
+                  <ng-template #defaultSourceTemplate>
+                    {{ getItemDisplayValue(item) }}
+                  </ng-template>
                 </button>
               </div>
               <div *ngIf="filteredSourceItems.length === 0" class="empty-state">
@@ -93,7 +99,13 @@
                   [class.single-select]="!enableMultiSelect"
                   (click)="toggleTargetSelection(item)"
                 >
-                  {{ getItemDisplayValue(item) }}
+                  <ng-container *ngIf="targetItemTemplate; else defaultTargetTemplate">
+                    <ng-container *ngTemplateOutlet="targetItemTemplate; context: { $implicit: item }">
+                    </ng-container>
+                  </ng-container>
+                  <ng-template #defaultTargetTemplate>
+                    {{ getItemDisplayValue(item) }}
+                  </ng-template>
                 </button>
               </div>
               <div *ngIf="filteredTargetItems.length === 0" class="empty-state">
