--- a/src/app/shared/components/transfer-panel/transfer-panel.component.scss
+++ b/src/app/shared/components/transfer-panel/transfer-panel.component.scss
@@ -43,8 +43,8 @@
       }
 
       &.active {
-        background-color: #0d6efd;
-        border-color: #0d6efd;
+        background-color: #114087d6 !important;;
+        border-color:  #0d6efd!important;
         color: white;
       }
 
@@ -54,8 +54,8 @@
         }
 
         &.active {
-          background-color: #0d6efd;
-          border-color: #0d6efd;
+          background-color:#114087d6 !important; // #0d6efd;
+          border-color: #0d6efd!important;
           color: white;
           font-weight: 500;
         }
