fix view values

--- a/src/app/modules/Site/configuration/sections/workflow/workflow-form/components/restricction-config/restricction-config.component.html
+++ b/src/app/modules/Site/configuration/sections/workflow/workflow-form/components/restricction-config/restricction-config.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="restrictionForm" novalidate class="col-lg-12 no-padder">
+<div [formGroup]="restrictionForm" novalidate class="col-lg-12 no-padder" (change)="validateChanges($event)">
     <div class="checkbox i-checks">
       <label>
         <input type="checkbox" [checked]="isRestrictionActive" formControlName="restrictionActive"
